--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
 <body>
 	<div class="container">
 		<header>
-			<h1>Mr. Sanchay Shobhane</h1>
+			<h1>Sanchay Shobhane</h1>
 			<p>Clound Engineer</p>
 		</header>
 		<section>
