--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
 		</section>
 		<section>
 			<h2>Experience</h2>
-			<h3>Web Developer, XYZ Company</h3>
-			<p>Developed and maintained multiple company websites using HTML, CSS, and JavaScript. Collaborated with designers and project managers to create visually appealing and user-friendly interfaces. Conducted regular code reviews to ensure high-quality and efficient code. </p>
-			<h3>Web Developer, ABC Agency</h3>
-			<p>Designed and implemented custom WordPress themes and plugins. Worked closely with clients to gather requirements and provide technical support. Conducted regular testing and debugging to ensure optimal performance.</p>
+			<h3>Linux Administrator, HCL Technologies</h3>
+			<p>Install, configure and maintain an organizations LAN, WAN, data communications network, OS and physical and virtual servers. Perform system monitoring and verify the integrity and availability of hardware, network and server resources and system. </p>
+			<h3>Cloud Engineer, Cybage Softwares Pvt Ltd</h3>
+			<p>Helping organizations migrate their computer systems to cloud. Configure cloud infrastructure components like networking and security services. Creating the application and database that perform on the cloud. Monitoring cloud management and data storage services..</p>
 		</section>
 		<section>
 			<h2>Education</h2>
 			<h3>Bachelor of Science in Computer Science</h3>
-			<p>University of ABC, Graduated May 20XX</p>
+			<p>RTMNU, Graduated May 2017</p>
 		</section>
-		<section id="projects">
-			<h2>Projects</h2>
-			<p>Some text about your projects...</p>
+		<section id="Project">
+			<h2>Amadeus</h2>
+			<p>Iseatz is an EKS based hospitality project focused on managing scalable and efficient cloud infrastructure for seamless application deployment and operations.</p>
 		</section>
 	</div>
 </body>
