--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 		</header>
 		<section>
 			<h2>Summary</h2>
-			<p>A highly motivated web developer with 5+ years of experience creating dynamic and responsive web applications. Strong skills in HTML, CSS, and JavaScript, with a passion for creating visually appealing and user-friendly interfaces. Committed to staying up-to-date with the latest trends and technologies in the industry.</p>
+			<p>Experienced Cloud Engineer with 5 years of expertise in designing, deploying, and managing scalable cloud infrastructure, leveraging tools like AWS, Kubernetes, and CL/CD pipeline to snsure high availability and performance.</p>
 		</section>
 		<section>
 			<h2>Skills</h2>
 			<ul>
-				<li>HTML</li>
-				<li>CSS</li>
-				<li>JavaScript</li>
-				<li>jQuery</li>
-				<li>Bootstrap</li>
-				<li>React</li>
+				<li>EXpertise in cloud platforms like AWS (EC2, S3, RDS, Lambda, EKS)</li>
+				<li>Skilled in designing and implementing CI/CD pipeline using GitHub Actions or AWS CodePipeline</li>
+				<li>Strong knowledge of networking, including VPC, Load Balances, and DNS management</li>
+				<li>Strong understanding od monitoring tools like DataDog, Zabbix, Nagios, SumoLogic and CloudWatch</li>
+				<li>Knowledge of Agine Methodologies and collabrative tools like Jira and Confluence</li>
+				<li>Skilled in troubleshooting and optimizing cloud applications for high availabilty and performance</li>
 			</ul>
 		</section>
 		<section>
